C lang day 03 operator and if-else

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,32 @@
 **/Info.plist
 clang/Week01/Day01/hello
 **/.vscode/**
+clang/Week01/Day02/hello
+clang/Week01/Day02/Input
+clang/Week01/Day02/memory
+clang/Week01/Day02/Untitled.drawio
+clang/Week01/Day02/hello.dSYM/Contents/Resources/DWARF/hello
+clang/Week01/Day02/Input.dSYM/Contents/Resources/DWARF/Input
+clang/Week01/Day02/memory.dSYM/Contents/Resources/DWARF/memory
+clang/Week01/Day03/arithmetic.dSYM/Contents/Resources/DWARF/arithmetic
+clang/Week01/Day03/Assignment.dSYM/Contents/Resources/DWARF/Assignment
+clang/Week01/Day03/bitwise.dSYM/Contents/Resources/DWARF/bitwise
+clang/Week01/Day03/bitwise.dSYM/Contents/Resources/DWARF/bitwise
+clang/Week01/Day03/if.dSYM/Contents/Resources/DWARF/if
+clang/Week01/Day03/if.dSYM/Contents/Resources/DWARF/if
+clang/Week01/Day03/relational_if_else.dSYM/Contents/Resources/DWARF/relational_if_else
+clang/Week01/Day03/relational_if_else.dSYM/Contents/Resources/DWARF/relational_if_else
+clang/Week01/Day03/workingday.dSYM/Contents/Resources/DWARF/workingday
+clang/Week01/Day03/arithmetic
+clang/Week01/Day03/arithmetic_2
+clang/Week01/Day03/Assignment
+clang/Week01/Day03/bitwise
+clang/Week01/Day03/bitwise_2
+clang/Week01/Day03/identifier
+clang/Week01/Day03/if
+clang/Week01/Day03/logical
+clang/Week01/Day03/relational
+clang/Week01/Day03/relational_if_else
+clang/Week01/Day03/ternary
+clang/Week01/Day03/ternary_2
+clang/Week01/Day03/workingday
