--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,14 @@ clang/Week01/Day03/relational_if_else
 clang/Week01/Day03/ternary
 clang/Week01/Day03/ternary_2
 clang/Week01/Day03/workingday
+clang/Week01/Day04/LeapYearDays
+clang/Week01/Day04/LeapYearDaysSwitchCase
+clang/Week01/Day04/LeapYearDays.dSYM/Contents/Resources/DWARF/LeapYearDays
+clang/Week01/Day04/LeapYearDaysSwitchCase.dSYM/Contents/Resources/DWARF/LeapYearDaysSwitchCase
+clang/Week01/Day04/11
+clang/Week01/Day04/dowhilelooping
+clang/Week01/Day04/forlooping
+clang/Week01/Day04/PrimeNumberIn1To100
+clang/Week01/Day04/whilelooping
+clang/Week01/Day04/forlooping.dSYM/Contents/Resources/DWARF/forlooping
+clang/Week01/Day04/whilelooping.dSYM/Contents/Resources/DWARF/whilelooping
